src/test/ui/derives/derives-span-PartialEq-tuple-struct.stderr
error[E0369]: binary operation `==` cannot be applied to type `Error`
  --> $DIR/derives-span-PartialEq-tuple-struct.rs:8:5
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
LL | struct Struct(
LL |     Error
   |     ^^^^^
   |
note: an implementation of `PartialEq<_>` might be missing for `Error`
  --> $DIR/derives-span-PartialEq-tuple-struct.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^^ must implement `PartialEq<_>`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Error` with `#[derive(PartialEq)]`
   |
LL | #[derive(PartialEq)]
   |

error[E0369]: binary operation `!=` cannot be applied to type `Error`
  --> $DIR/derives-span-PartialEq-tuple-struct.rs:8:5
   |
LL | #[derive(PartialEq)]
   |          --------- in this derive macro expansion
LL | struct Struct(
LL |     Error
   |     ^^^^^
   |
note: an implementation of `PartialEq<_>` might be missing for `Error`
  --> $DIR/derives-span-PartialEq-tuple-struct.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^^ must implement `PartialEq<_>`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Error` with `#[derive(PartialEq)]`
   |
LL | #[derive(PartialEq)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0369`.
